<resources>
    <string name="app_name">Охота на лис</string>
    <string name="title_activity_maps">Карта</string>
    <string name="title_activity_menu">Меню</string>

    <string name="startPlay">Играть</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>

    <string name="pointer">Указатель</string>
    <string name="compass">Компас</string>
    <string name="audiosignal">Аудиосигнал</string>
    <string name="foxduration">Продолжительность лисы\n(секунды)</string>
    <string name="foxNumber">Количество лис</string>
    <string name="foxDistance">Максимальное расстояние\n(километоры)</string>

    <string name="defaultFoxNumber">5</string>
    <string name="defaultFoxDuration">60</string>
    <string name="defaultFoxDistance">5</string>

    <string name="pointerSettings">pointer</string>
    <string name="compassSettings">compass</string>
    <string name="audioSignalSettings">audioSignal</string>
    <string name="foxDurationSettings">foxDuration</string>
    <string name="foxNumberSettings">foxNumber</string>
    <string name="foxDistanceSettings">foxDistance</string>
    <string name="eraseDistanceSettings">eraseDistance</string>


    <string name="settingsReference">settings</string>
    <string name="toStart">К началу</string>
    <string name="typeMap">Тип карты</string>
    <string name="giveUp">Сдаться</string>
    <string name="goback">goBack</string>
    <string name="defaultEraseDistance">100</string>
    <string name="eraseDistance">Расстояние касание лисы\n(метры)</string>
    <string name="help">Помощь</string>
    <string name="textHelp">В данном разделе приведена основная информация, которая поможет облегчить использование приложения.
        \n\nДля начала игры необходимо завершить предыдущую и перейти в главное игровое окно приложения.
        \n\nДля игры необходим постоянной включенный GPS-модуль.
        \n\nИгру можно завершить 2 способами: сдаться, либо найти всех "лис".
        \n\nЛисы выходят на связь по очереди. Найденные лисы на связь не выходит.
        \n\nВ правом верхнем углу отображается порядковый номер "лисы", которая вышла на связь
        \n\nВсе найденные "лисы" оставляют отметки на карте.
        \n\nПосле завершения игры на карте отображаются все "лисы"</string>
</resources>
