<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hunting.fox.foxhunting.Activities.MenuActivity"

    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_arrow"
            android:contentDescription="@string/goback"
            android:onClick="onBack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/help"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:textColor="#000"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text= "@string/textHelp"
            android:textColor="#000"
            android:gravity="left|center"

            android:layout_margin="15dp"
            android:paddingTop="25dp" />
    </LinearLayout>
</RelativeLayout>
