<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.hunting.fox.foxhunting.Activities.MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/menuContainer">

        <Button
            android:id="@+id/btnTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickToStart"
            android:text="@string/toStart" />

        <Button
            android:id="@+id/btnTypeMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickTypeMap"
            android:text="@string/typeMap" />


        <Button
            android:id="@+id/btnGiveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickGiveUp"
            android:text="@string/giveUp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:id="@+id/currentMsg"/>

    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/menuContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/imageViewCompass"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/compass"
        android:contentDescription="@string/compass" />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:id="@+id/gauge1"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"

        app:gaugePointEndColor="#000000"
        app:gaugePointStartColor="#ff0000"
        app:gaugeStrokeColor="#c2c2c2"

        app:gaugeStartAngle="135"
        app:gaugeStrokeCap="BUTT"
        app:gaugeStrokeWidth="10dp"
        app:gaugeStartValue="0"
        app:gaugeEndValue="100"
        app:gaugeSweepAngle="270"
        app:gaugeDividerSize="1"
        app:gaugeDividerColor="#ffff00"
        app:gaugeDividerStep="10"
        app:gaugeDividerDrawFirst="false"
        app:gaugeDividerDrawLast="false"

        />
</RelativeLayout>